syntax = "proto3";

package personaappapi;

import "entities.proto";
import "google/protobuf/timestamp.proto";


// Register
message RegisterRequest {
    string email = 1;
    string phone = 2; // optional for persona
    string password = 3;
    AccountType account_type = 4;
}

message RegisterResponse {
    Token token = 1;
}

// Login
message LoginRequest {
    string login = 1;
    string password = 2;
}

message LoginResponse {
    Token token = 1;
}

// Logout
message LogoutRequest {}

message LogoutResponse {}

// Refresh
message RefreshRequest {}

message RefreshResponse {
    Token token = 1;
}

// Entities
message Token {
    string token = 1;
    google.protobuf.Timestamp expires_at = 2;
    AccountType account_type = 3;
}