syntax = "proto3";

package personaappapi;

message Empty {}

enum AccountType {
    ACCOUNT_TYPE_UNKNOWN = 0;
    ACCOUNT_TYPE_COMPANY = 1;
    ACCOUNT_TYPE_PERSONA = 2;
}
